--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -63,3 +63,8 @@
 - name: Andrew Stephanoff
   facebook: andrew.stephanoff
 
+- name: Aleh Kot
+  facebook: aleh.kot
+
+- name: Eduard Trayan
+  facebook: trayan.eduard
