Add Aleh Kot to contacts.

--- a/_data/contacts.yml
+++ b/_data/contacts.yml
@@ -9,3 +9,8 @@
   skype: max.romanovsky
   facebook: max.romanovsky
   homepage: http://maxromanovsky.com/
+
+- name: Aleh Kot
+  email: kot.oleg@gmail.com
+  skype: k0teg_
+  facebook: aleh.kot
