Add speakers of #11 meetup.

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -68,3 +68,12 @@
 
 - name: Eduard Trayan
   facebook: trayan.eduard
+
+- name: Kolesnikov Artem
+  facebook: tyomo4ka
+
+- name: Cheledinov Igor
+  facebook: cheledinov
+
+- name: Yury Pliashkou
+  facebook: pliashkou
